/***********************************************************************
X3 ChangeLog

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. 

	* src/nickserv.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. Fix incorrect terms in ldap email error
	message.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: fix ldap_delete not binding first, so causing
	access denied sometimes.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* x3.conf.example: fix ldap config example so it actually works

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.h: lowercase account name setting

	* x3.conf.example: lowercase account name setting

	* src/nickservc: only lowercase account names if the option is set.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/tools.c: adding ircd_strtolower() func

	* src/common.h: adding ircd_strtolower() func

	* src/nickserv.c: force accounts to lowercase at all inputs. ++fix
	warning ++fix another

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed a bunch of ldap result value check bugs

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Added oper group support to ldap

	* src/x3ldap.c: Added group support to ldap. Fixed set email bug

	* src/x3ldap.h: Added group support to ldap. 

	* src/nickserv.c: Added group support to ldap

	* src/nickserv.h: Added group support to ldap

2007-02-11  Neil Spierling  <sirvulcan@gmail.com>

	* tools/ldap/ldap_convert.php: Fixes after more testing.

2007-02-09  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: addid search function to get users email address from
	ldap

	* src/x3ldap.h: func defs for search

	* src/nicserv.c: update local copy of email address when they log
	in via ldap. fix memory leak.

2007-02-08  Alex Schumann  <rubin@afternet.org>
