@@ -1,7 +1,12 @@
 /***********************************************************************
 X3 ChangeLog
 
-2007-02-12  Alex Schumann  <rubin@afternet.org>
+2007-02-13  Alex Schumann  <rubin@afternet.org>
+
+	* src/nickserv.c: Fix bugs with ldap cookies. Fix opt_password
+	warning/crash potential
+
+2007-02-13  Alex Schumann  <rubin@afternet.org>
 
 	* src/x3ldap.c: Fix double-hashing of passwords when using ldap and
 	resetpass cookie system. 
